# Cognia

./: App.tsx  README.md  index.html  metadata.json  package.json  pyproject.toml  types.ts
cognia/: __init__.py  alert.py  corr.py  interpret.py  missing.py  outliers.py  profiling.py  quick_eda.py  report.py  stats.py
components/: ControlPanel.tsx  DataTable.tsx  MessageBubble.tsx
demo/: Input file.py  cognia_eda_report.html
services/: geminiService.ts
